			ROX-Session
			A very simple session manager
			by Thomas Leonard

TODO: Get sawfish's iconize animation to go into the middle of the screen
      so people stop blaming us for hiding the icons under the panel...

      makedist to put in subdir...

      WM should be a command, not a program name (krjw).

      Time-stamp log messages

19-Jul-2002
~~~~~~~~~~~
Change 'Preferences' to 'Session Settings' in logout box, to make it more
obvious what it does.

19-Jun-2002 (Release 0.1.16)
~~~~~~~~~~~
Added message window so you can see errors after the popup has hidden itself.

11-Jun-2002
~~~~~~~~~~~
Require version 2.0.1 or later of Gtk, due to bugs in 2.0.0.

31-May-2002
~~~~~~~~~~~
Bugfix: Really added missing linker flags (reported by Stephen Watson again).

30-May-2002
~~~~~~~~~~~
Bugfix: Could display the Logout box on startup.

25-May-2002
~~~~~~~~~~~
Fix compile problem on FreeBSD (Jimmy Olgeni).

15-May-2002 (Release 0.1.15)
~~~~~~~~~~~
Using the new XFT font system is now the default (edit ROX-Session/AppRun
if you want it off).
Added xfwm and xfwm4 to window manager list.

30-Apr-2002
~~~~~~~~~~~
Added Metacity and kwin to window manager list, and updated list of failsafe
window managers (suggested by Michel Alexandre Salim).

23-Apr-2002
~~~~~~~~~~~
Add BlackBox and FluxBox to the window manager list, and added option to
set how long log messages are displayed for (requested by Michel Alexandre
Salim).
Upgraded to new options code.

08-Apr-2002
~~~~~~~~~~~
Added support for translations.
Added Danish translation (Christian Storgaard).

25-Mar-2002
~~~~~~~~~~~
Added missing linker flags (reported by Stephen Watson).

06-Mar-2002 (Release 0.1.14)
~~~~~~~~~~~
Added XSetting for default Gtk+ font.

05-Mar-2002
~~~~~~~~~~~
Added settings for cursor blinking.

03-Mar-2002
~~~~~~~~~~~
Put choice of window manager in the options box, instead of having its own
system. The 'DefaultWM' file is no longer used.

01-Mar-2002
~~~~~~~~~~~
Changed over to Gtk+-2.0.
